--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -77,8 +77,8 @@
     </section>
 
 
-    <section class=" p-5 ">
-        <div class="container home-container pt-5 g-4 overlay-content rounded-4  shadow-lg " style="border-radius: 15px; background-color: #F5F5F5;">
+    <section class=" p-5 " style="background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500); ">
+        <div class="container home-container pt-5 g-4 overlay-content rounded-4  shadow-lg " style="border-radius: 15px; ">
             <div class="row justify-content-center mb-4 mb-md-5">
                 <div class="col-12 text-center">
                     <!-- Custom class for tight background -->
@@ -94,7 +94,7 @@
                 <div class="col-12 col-lg-10 col-xl-8">
                     <div class="row justify-content-center pb-5">
                         <div class="col-12 col-md-6 col-lg-5 p-auto">
-                            <img src="@Url.Content("~/Content/Customer/images/services/1.webp")" class="img-fluid home-feature-img" alt="Description of Image">
+                            <img src="@Url.Content("~/Content/Customer/images/services/1.webp")" class="img-fluid home-feature-img rounded-5" alt="Description of Image">
                         </div>
                         <div class="col-12 col-md-6 col-lg-7 text-start">
                             <h3>East Asian Melodies</h3>
@@ -110,14 +110,14 @@
                             <p>Dive into the rich history and traditions of East Asia through educational workshops and events. Gain insights, understand values, and break down cultural barriers.</p>
                         </div>
                         <div class="col-12 col-md-6 col-lg-5 p-auto">
-                            <img src="@Url.Content("~/Content/Customer/images/services/2.webp")" class="img-fluid home-feature-img" alt="">
+                            <img src="@Url.Content("~/Content/Customer/images/services/2.webp")" class="img-fluid rounded-5 home-feature-img" alt="">
                         </div>
 
                     </div>
 
                     <div class="row justify-content-center pb-5">
                         <div class="col-12 col-md-6 col-lg-5 p-auto">
-                            <img src="@Url.Content("~/Content/Customer/images/services/3.webp")" class="img-fluid home-feature-img" alt="">
+                            <img src="@Url.Content("~/Content/Customer/images/services/3.webp")" class="img-fluid rounded-5 home-feature-img" alt="">
                         </div>
                         <div class="col-12 col-md-6 col-lg-7 text-start">
                             <h3>Voices of East Asia</h3>
@@ -133,7 +133,7 @@
                             <p>Explore data-driven insights into the lives of East Asian communities in Melbourne. Understand the patterns, challenges, and successes of integration, aiming for a society free from discrimination.</p>
                         </div>
                         <div class="col-12 col-md-6 col-lg-5 p-auto">
-                            <img src="@Url.Content("~/Content/Customer/images/services/4.webp")" class="img-fluid home-feature-img" alt="">
+                            <img src="@Url.Content("~/Content/Customer/images/services/4.webp")" class="img-fluid rounded-5 home-feature-img" alt="">
                         </div>
 
                     </div>
