--- a/TP03MainProj/Views/Events/Index.cshtml
+++ b/TP03MainProj/Views/Events/Index.cshtml
@@ -100,9 +100,9 @@
                 @*<audio id="cheerSound" src="path/to/cheer.mp3" preload="auto"></audio>*@
 
                 <!-- 喝彩动画 -->
-                <!--<div id="cheerAnimation" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999;">
+                @*<div id="cheerAnimation" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999;">
                     <div class="cheer" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('@Url.Content("~/Content/Images/Quiz/cheer1.gif")') repeat; background-size: cover; background-position: center;"></div>
-                </div>-->
+                </div>*@
 
             </div>
         </div>
