--- a/TP03MainProj/Views/Education/DiverseCultures.cshtml
+++ b/TP03MainProj/Views/Education/DiverseCultures.cshtml
@@ -301,5 +301,11 @@
                 color: gold;
             }
 
+        .fixed-size-image {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+        }
+
     </style>
 }
