--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -21,43 +21,73 @@
     <link href="@Url.Content("~/Content/Customer/fonts/et-line-font/style.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/scrollToTop.css")" rel="stylesheet" />
 </head>
-<body class="" style="">
+<body class="m-auto" style="">
     <!-- page preloader begin -->
     <!-- page preloader close -->
     <!-- header begin -->
-    <div class="container-fluid" style="position: relative; z-index: 1030; background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500); ">
-    @*<div class="container-fluid" style="position: relative; z-index: 1030; background: linear-gradient(to right, #8B0000, #A52A2A); ">*@
-
-    @*<div class="container-fluid" style="position: relative; z-index: 1030; background: linear-gradient(to right, #8A360F, #CC4E5C); ">*@
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-
-
-            <a href="@Url.Action("Index", "Home")" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+    <div class="container-fluid gradient-bg" style="position: relative; z-index: 1030;">
+        <header class="d-flex flex-wrap align-items-center justify-content-between py-3 custom-header">
+            <a href="@Url.Action("Index", "Home")" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none d-none d-md-flex">
                 <img class="p-auto pt-1"
                      src="@Url.Content("~/Content/Customer/images/logo-mobile.png")"
                      srcset="@Url.Content("~/Content/Customer/images/logo.png") 800w,
-                 @Url.Content("~/Content/Customer/images/logo-mobile.png") 400w"
+                         @Url.Content("~/Content/Customer/images/logo-mobile.png") 400w"
                      sizes="(max-width: 768px) 100vw, 50vw"
                      alt="Responsive Logo">
             </a>
+            <button class="header_navbar-toggler d-md-none" type="button" aria-label="Toggle navigation">
+                <span class="header_navbar-toggler-icon">&#9776;</span>
+            </button>
             @using TP03MainProj.Helper
 
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "Index")" href="@Url.Action("Index", "Home")">Home</a></li>
+        <div class="collapse d-md-flex flex-column flex-md-row align-items-center col-md-6 justify-content-center p-2" id="header_sidebar">
 
-                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Education", "Index", "Education", "DiverseCultures")" href="@Url.Action("Index", "Education")">Culture Education</a></li>
-
-                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "CulturalEvents")" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a></li>
-
-            </ul>
-
-            <div class="col-md-3 text-end">
+            <div class="d-flex justify-content-between mb-3 w-100">
+                <a href="@Url.Action("Index", "Home")" class="d-flex align-items-center text-dark text-decoration-none d-md-none">
+                    <img class="p-auto pt-1"
+                         src="@Url.Content("~/Content/Customer/images/logo-mobile.png")"
+                         srcset="@Url.Content("~/Content/Customer/images/logo.png") 800w,
+                                 @Url.Content("~/Content/Customer/images/logo-mobile.png") 400w"
+                         sizes="(max-width: 768px) 100vw, 50vw"
+                         alt="Responsive Logo">
+                </a>
 
             </div>
-            <button id="scrollToTopBtn" title="To the Top"> ↑ </button>
+            <ul class="nav flex-column flex-md-row col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "Index")" href="@Url.Action("Index", "Home")">Home</a></li>
+                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Education", "Index", "Education", "DiverseCultures")" href="@Url.Action("Index", "Education")">Culture Education</a></li>
+                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "CulturalEvents")" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a></li>
+            </ul>
+        </div>
+
+            <div class="col-md-3 text-end">
+                <!-- 可选内容放在这里 -->
+            </div>
         </header>
     </div>
+    <button id="scrollToTopBtn" title="To the Top"> ↑ </button>
 
+    <button id="scrollToTopBtn" title="To the Top"> ↑ </button>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var toggler = document.querySelector(".header_navbar-toggler");
+            var sidebar = document.getElementById("header_sidebar");
+            var closeSidebar = document.querySelector(".close-sidebar");
+
+            toggler.addEventListener("click", function () {
+                sidebar.classList.toggle("show");
+                toggler.classList.toggle("hidden");
+            });
+
+            closeSidebar.addEventListener("click", function () {
+                sidebar.classList.toggle("show");
+                toggler.classList.toggle("hidden");
+            });
+        });
+
+
+    </script>
     <!-- header close -->
     <!-- content begin -->
     <div class="bg-light">
@@ -68,61 +98,62 @@
     <!-- footer begin -->
     <div class="container-fluid bg-warning" style="background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500);">
         @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8B0000, #A52A2A); ">*@
-            @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8A360F, #CC4E5C);">*@
+        @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8A360F, #CC4E5C);">*@
 
-                <footer class="footer py-5">
-                    <div class="row">
-                        <div class="col-4 offset-1">
-                            <img class="logo-footer"
-                                 src="@Url.Content("~/Content/Customer/images/logo-mobile.png")"
-                                 srcset="@Url.Content("~/Content/Customer/images/logo.png") 800w,
+        <footer class="footer py-5">
+            <div class="row">
+                <div class="col-12 col-md-4 offset-md-1">
+                    <img class="logo-footer img-fluid"
+                         src="@Url.Content("~/Content/Customer/images/logo-mobile.png")"
+                         srcset="@Url.Content("~/Content/Customer/images/logo.png") 800w,
                              @Url.Content("~/Content/Customer/images/logo-mobile.png") 400w"
-                                 sizes="(max-width: 768px) 100vw, 50vw"
-                                 alt="CultMelbourne Logo">
-                            <div class="spacer-20"></div>
-                            <p class="text-white">Committed to celebrating Melbourne's multicultural legacy, we aim to educate and unite, combating discrimination and nurturing cultural connections.</p>
-                        </div>
-                        <div class="col-2">
-                        </div>
+                         sizes="(max-width: 768px) 100vw, 50vw"
+                         alt="CultMelbourne Logo">
+                    <div class="spacer-20"></div>
+                    <p class="text-white">Committed to celebrating Melbourne"s multicultural legacy, we aim to educate and unite, combating discrimination and nurturing cultural connections.</p>
+                </div>
 
-                        <div class="col-2">
-                            <h5 class="text-white fw-bold">Culture Melbourne</h5>
-                            <ul class="nav flex-column">
-                                <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Home")" class=" nav-link text-white p-0 ">Home</a></li>
-                                <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class=" nav-link  text-white p-0 ">Education</a></li>
-                                <li class="nav-item  text-white mb-2"><a href="#cultural-events" class="nav-link  p-0 text-white ">Culture Events</a></li>
-                            </ul>
-                        </div>
+                <div class="col-2">
+                </div>
 
-                        <div class="col-2">
-                            <h5 class="text-white fw-bold">Our Services</h5>
-                            <ul class="nav flex-column">
-                                <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">East Asian Melodies</a></li>
-                                <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Discover East Asia</a></li>
-                                <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Voices of East Asia</a></li>
-                                <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Cultural Insights</a></li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="col-2">
+                    <h5 class="text-white fw-bold">Culture Melbourne</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Home")" class=" nav-link text-white p-0 ">Home</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class=" nav-link  text-white p-0 ">Education</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="#cultural-events" class="nav-link  p-0 text-white ">Culture Events</a></li>
+                    </ul>
+                </div>
 
-                    <div class="d-flex justify-content-center border-white border-opacity-25   py-4 my-4 border-top">
-                        <p class="text-white">© 2024 The Quad. All rights reserved.</p>
-                    </div>
-                </footer>
+                <div class="col-2">
+                    <h5 class="text-white fw-bold">Our Services</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">East Asian Melodies</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Discover East Asia</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Voices of East Asia</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class="nav-link  text-white p-0 ">Cultural Insights</a></li>
+                    </ul>
+                </div>
             </div>
 
+            <div class="d-flex justify-content-center border-white border-opacity-25   py-4 my-4 border-top">
+                <p class="text-white">© 2024 The Quad. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
 
 
 
 
-            <!-- footer close -->
 
-            @Scripts.Render("~/bundles/jquery")
-            @Scripts.Render("~/bundles/bootstrap")
-            @Scripts.Render("~/bundles/scrollToTopJS")
+    <!-- footer close -->
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/scrollToTopJS")
 
 
-            @RenderSection("scripts", required: false)
+    @RenderSection("scripts", required: false)
 
 </body>
 </html>
