--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -61,33 +61,11 @@
         </div>
 
             <div class="col-md-3 text-end">
-                <!-- 可选内容放在这里 -->
             </div>
         </header>
     </div>
-    <button id="scrollToTopBtn" title="To the Top"> ↑ </button>
+    <button id="scrollToTopBtn" class="bg-dark"  title="To the Top"> ↑ </button>
 
-    <button id="scrollToTopBtn" title="To the Top"> ↑ </button>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var toggler = document.querySelector(".header_navbar-toggler");
-            var sidebar = document.getElementById("header_sidebar");
-            var closeSidebar = document.querySelector(".close-sidebar");
-
-            toggler.addEventListener("click", function () {
-                sidebar.classList.toggle("show");
-                toggler.classList.toggle("hidden");
-            });
-
-            closeSidebar.addEventListener("click", function () {
-                sidebar.classList.toggle("show");
-                toggler.classList.toggle("hidden");
-            });
-        });
-
-
-    </script>
     <!-- header close -->
     <!-- content begin -->
     <div class="bg-light">
