--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -12,12 +12,12 @@
                     <div class="carousel-caption d-md-block">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-start">
-                                <div class="col-12 col-md-8">
+                                <div class="col-12 col-md-8 col-lg-6">
                                     <div class="mb-4 rounded text-warning diversity-highlight">Embracing Diversity</div>
                                     <h1 class="display-2 fw-bold">Explore <span class="text-warning">East Asian</span> Culture</h1>
                                     <hr>
-                                    <p class="slider-teaser">Dive into the rich history, arts, and traditions of East Asia and experience its unique charm.</p>
-                                    <a class="btn btn-primary" href="@Url.Action("DiverseCultures", "Education")">Explore Culture</a>
+                                    <p class="slider-teaser fs-6 fs-md-5 fs-lg-4">Dive into the rich history, arts, and traditions of East Asia and experience its unique charm.</p>
+                                    <a class="btn btn-primary fs-6 fs-md-5 fs-lg-4 h-auto" href="@Url.Action("Index", "Home")#footerbottom">Explore Culture</a>
                                 </div>
                             </div>
                         </div>
@@ -31,12 +31,12 @@
                     <div class="carousel-caption d-md-block">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-start">
-                                <div class="col-12 col-md-8">
+                                <div class="col-12 col-md-8 col-lg-6">
                                     <div class="mb-4 rounded text-warning diversity-highlight">Celebrating Traditions</div>
                                     <h1 class="display-2 fw-bold">Our Stories</h1>
                                     <hr>
-                                    <p class="slider-teaser">Hear the stories of East Asian immigrants who have made their mark in Melbourne, adding color and diversity to our city.</p>
-                                    <a class="btn btn-primary" href="@Url.Action("Index", "Events")">Join Festivities</a>
+                                    <p class="slider-teaser fs-6 fs-md-5 fs-lg-4">Hear the stories of East Asian immigrants who have made their mark in Melbourne, adding color and diversity to our city.</p>
+                                    <a class="btn btn-primary fs-6 fs-md-5 fs-lg-4 h-auto" href="@Url.Action("Index", "Home")#footerbottom">Join Festivities</a>
                                 </div>
                             </div>
                         </div>
@@ -49,12 +49,12 @@
                     <div class="carousel-caption d-md-block">
                         <div class="container">
                             <div class="row justify-content-center justify-content-md-start">
-                                <div class="col-12 col-md-8">
+                                <div class="col-12 col-md-8 col-lg-6">
                                     <div class="mb-4 rounded text-warning diversity-highlight">Preserving Heritage</div>
                                     <h1 class="display-2 fw-bold">Building an Inclusive Community</h1>
                                     <hr>
-                                    <p class="slider-teaser">Learn how to recognize and oppose discrimination, striving together to create a more inclusive and understanding environment for East Asian immigrants.</p>
-                                    <a class="btn btn-primary" href="@Url.Action("Index", "Education")">Support Culture</a>
+                                    <p class="slider-teaser fs-6 fs-md-5 fs-lg-4">Learn how to recognize and oppose discrimination, striving together to create a more inclusive and understanding environment for East Asian immigrants.</p>
+                                    <a class="btn btn-primary fs-6 fs-md-5 fs-lg-4 h-auto" href="@Url.Action("Index", "Home")#footerbottom">Support Culture</a>
                                 </div>
                             </div>
                         </div>
@@ -255,7 +255,7 @@
 
         .carousel-item img {
             width: 100%;
-            height: 1200px;
+            height: 1100px;
             object-fit: cover;
         }
 
