--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -54,9 +54,9 @@
 
             </div>
             <ul class="nav flex-column flex-md-row col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "Index")" href="@Url.Action("Index", "Home")">Home</a></li>
-                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Education", "Index", "Education", "DiverseCultures")" href="@Url.Action("Index", "Education")">Culture Education</a></li>
-                <li><a class="nav-link px-2 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "CulturalEvents")" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a></li>
+                <li><a class="nav-link pe-5 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "Index")" href="@Url.Action("Index", "Home")">Home</a></li>
+                <li><a class="nav-link pe-5 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Education", "Index", "Education", "DiverseCultures")" href="@Url.Action("Index", "Education")">Culture Education</a></li>
+                <li><a class="nav-link  text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "CulturalEvents")" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a></li>
             </ul>
         </div>
 
@@ -78,7 +78,7 @@
         @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8B0000, #A52A2A); ">*@
         @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8A360F, #CC4E5C);">*@
 
-        <footer class="footer py-5">
+        <footer class="footer py-5" id="footerbottom">
             <div class="row">
                 <div class="col-12 col-md-4 offset-md-1">
                     <img class="logo-footer img-fluid"
