--- a/TP03MainProj/Views/Shared/_Layout.cshtml
+++ b/TP03MainProj/Views/Shared/_Layout.cshtml
@@ -35,36 +35,33 @@
                      sizes="(max-width: 768px) 100vw, 50vw"
                      alt="Responsive Logo">
             </a>
-            <button class="header_navbar-toggler d-md-none" type="button" aria-label="Toggle navigation">
-                <span class="header_navbar-toggler-icon">&#9776;</span>
-            </button>
-            @using TP03MainProj.Helper
-
-        <div class="collapse d-md-flex flex-column flex-md-row align-items-center col-md-6 justify-content-center p-2" id="header_sidebar">
-
-            <div class="d-flex justify-content-between mb-3 w-100">
-                <a href="@Url.Action("Index", "Home")" class="d-flex align-items-center text-dark text-decoration-none d-md-none">
-                    <img class="p-auto pt-1"
+            <div class="d-flex align-items-center d-md-none justify-content-between w-100">
+                <button class="header_navbar-toggler" type="button" aria-label="Toggle navigation" onclick="toggleSidebar()">
+                    <span class="header_navbar-toggler-icon">&#9776;</span>
+                </button>
+                <a href="@Url.Action("Index", "Home")" class="d-flex align-items-center ms-auto text-dark text-decoration-none logo-container">
+                    <img class="p-auto pt-1 logo-mobile"
                          src="@Url.Content("~/Content/Customer/images/logo-mobile.png")"
-                         srcset="@Url.Content("~/Content/Customer/images/logo.png") 800w,
-                                 @Url.Content("~/Content/Customer/images/logo-mobile.png") 400w"
-                         sizes="(max-width: 768px) 100vw, 50vw"
                          alt="Responsive Logo">
                 </a>
-
             </div>
-            <ul class="nav flex-column flex-md-row col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a class="nav-link pe-5 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "Index")" target="_blank" href="@Url.Action("Index", "Home")">Home</a></li>
-                <li><a class="nav-link pe-5 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Education", "Index", "Education", "DiverseCultures")" target="_blank" href="@Url.Action("Index", "Education")">Culture Education</a></li>
-                <li><a class="nav-link  text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "CulturalEvents")" target="_blank" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a></li>
-            </ul>
-        </div>
+            @using TP03MainProj.Helper
 
-            <div class="col-md-3 text-end">
+            <div class="collapse d-md-flex flex-column flex-md-row align-items-center col-md-6 justify-content-center p-2" id="header_sidebar">
+                <ul class="nav flex-column flex-md-row col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a class="nav-link pe-5 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "Index")" href="@Url.Action("Index", "Home")">Home</a></li>
+                    <li><a class="nav-link pe-5 text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Education", "Index", "Education", "DiverseCultures")" href="@Url.Action("Index", "Education")">Culture Education</a></li>
+                    <li><a class="nav-link text-white fs-5 link-dark @NavigationHelper.IsActive(ViewContext, "Home", "CulturalEvents")" href="@Url.Action("Index", "Home")#cultural-events">Culture Events</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 text-end d-none d-md-block">
             </div>
         </header>
     </div>
-    <button id="scrollToTopBtn" class="bg-dark"  title="To the Top"> ↑ </button>
+    <button id="scrollToTopBtn" class="bg-dark" title="To the Top">↑</button>
+
+
+
 
     <!-- header close -->
     <!-- content begin -->
@@ -75,8 +72,7 @@
     <!-- content close -->
     <!-- footer begin -->
     <div class="container-fluid bg-warning" style="background: linear-gradient(to right, #FFA500, #FF8C00, #FF7F50, #FF4500);">
-        @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8B0000, #A52A2A); ">*@
-        @*<div class="container-fluid bg-warning" style="background: linear-gradient(to right, #8A360F, #CC4E5C);">*@
+
 
         <footer class="footer py-5" id="footerbottom">
             <div class="row">
@@ -98,8 +94,8 @@
                     <h5 class="text-white fw-bold">Culture Melbourne</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Home")" class=" nav-link text-white p-0 ">Home</a></li>
-                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")"target="_blank" class=" nav-link  text-white p-0 ">Education</a></li>
-                        <li class="nav-item  text-white mb-2"><a href="#cultural-events" target="_blank" class="nav-link  p-0 text-white ">Culture Events</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="@Url.Action("Index", "Education")" class=" nav-link  text-white p-0 ">Education</a></li>
+                        <li class="nav-item  text-white mb-2"><a href="#cultural-events" class="nav-link  p-0 text-white ">Culture Events</a></li>
                     </ul>
                 </div>
 
