--- a/TP03MainProj/Views/Education/Index.cshtml
+++ b/TP03MainProj/Views/Education/Index.cshtml
@@ -39,7 +39,7 @@
                         {
                             <div class="col-6 col-md-4 col-lg-3 col-xl-2 book rounded" style="background-image: url('@Url.Content($"~/Content/Customer/images/team/{country}.jpg")');">
                                 <a href="@Url.Action("DiverseCultures", "Education", new { country = country.ToLower() })" class="overlay-btn w-100 h-100 d-flex align-items-center justify-content-center" style="text-decoration: none;">
-                                    <span class="fw-bold fs-3">@country</span>
+                                    <span class="fw-bold ">@country</span>
                                 </a>
                             </div>
                         }
