--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -149,13 +149,14 @@
             <div class="row justify-content-center align-items-center h-100">
                 <div class="col-12 p-5">
                     <div class="diversity-highlight text-warning mb-3">Our Mission</div>
-                    <h2 class="fw-bold display-4" style="word-spacing: 0.25em;">
+                    <div class="mission-statement fw-bold display-4" style="word-spacing: 0.25em;">
                         We aim to promote multicultural respect and unity in Melbourne, empowering East Asian communities to overcome discrimination and celebrate diversity.
-                    </h2>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
 
     <section id="cultural-events" class="bg-body py-5">
         <div class="container">
