--- a/TP03MainProj/Views/Events/Attractions/Chinese.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Chinese.cshtml
@@ -32,7 +32,7 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-primary" onclick="window.location.href='https://whatson.melbourne.vic.gov.au/article/chinatowns-most-iconic-restaurants';">More</button>
+            <a class="btn btn-primary h-auto" target="_blank" href="https://whatson.melbourne.vic.gov.au/article/chinatowns-most-iconic-restaurants">More</a>
         </div>
     </div>
 
