--- a/TP03MainProj/Views/Events/Attractions/Filipino.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Filipino.cshtml
@@ -39,7 +39,7 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-primary" onclick="window.location.href='https://whatson.melbourne.vic.gov.au/article/where-to-find-the-best-filipino-food-and-restaurants-in-melbourne-cbd';">More</button>
+            <a class="btn btn-primary h-auto" target="_blank" href="https://whatson.melbourne.vic.gov.au/article/where-to-find-the-best-filipino-food-and-restaurants-in-melbourne-cbd">More</a>
         </div>
     </div>
 
