--- a/TP03MainProj/Views/Events/Attractions/Korean.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Korean.cshtml
@@ -39,7 +39,7 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-primary" onclick="window.location.href='https://whatson.melbourne.vic.gov.au/article/the-best-korean-street-food-in-melbourne';">More</button>
+            <a class="btn btn-primary h-auto" target="_blank" href="https://whatson.melbourne.vic.gov.au/article/the-best-korean-street-food-in-melbourne">More</a>
         </div>
     </div>
 
