--- a/TP03MainProj/Views/Events/Attractions/Vietnamese.cshtml
+++ b/TP03MainProj/Views/Events/Attractions/Vietnamese.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button class="btn btn-primary" onclick="window.location.href='https://whatson.melbourne.vic.gov.au/article/the-best-vietnamese-restaurants-in-melbourne';">More</button>
+            <a class="btn btn-primary h-auto" target="_blank" href="https://whatson.melbourne.vic.gov.au/article/the-best-vietnamese-restaurants-in-melbourne">More</a>
         </div>
     </div>
 
