--- a/TP03MainProj/Views/Events/_EventsList.cshtml
+++ b/TP03MainProj/Views/Events/_EventsList.cshtml
@@ -20,7 +20,7 @@
                             <div class="event-detail p-3">
                                 <h4>@evt.Title</h4>
                                 <p>@evt.Description</p>
-                                <a class="btn btn-primary text-white" href="@evt.Url" target="_blank">More Info</a>
+                                <a class="btn btn-primary text-white h-auto" href="@evt.Url" target="_blank">More Info</a>
                             </div>
                         </div>
                     </div>
