--- a/TP03MainProj/Views/Home/Index.cshtml
+++ b/TP03MainProj/Views/Home/Index.cshtml
@@ -163,7 +163,7 @@
             <div class="row mb-4">
                 <div class="col-12 text-start">
                     <div class="d-inline-block  px-3 py-1 border" style="border-radius: .25rem;background-color:#e2e2e2">
-                        <span class="text-dark ">Explore Cultures</span>
+                        <span class="text-dark ">Explore Traditions</span>
                     </div>
                     <h2 class="mt-3 fw-bold">Select Culture to Explore</h2>
                 </div>
